# unicornair

./: .gitignore  clean_docker.sh  docker-compose.yml  ksql.sql  pyproject.toml  readme.md
airport_dashboard/: airport_screen.py  dockerfile
apis/flight_status_api/: api.py  dockerfile
app/: app.py  pyproject.toml  statusCSVGen.py
app_3/: read_files.py
consumer_1/: dockerfile
customer_notifier/: dockerfile  notification.py
dashboard/: airport_screen.py  fight_status_internal.py
dashboards/airport_dashboard/: dockerfile
dashboards/internal_dashboard/: app.py
data/: .gitignore
data/flight_status/: flight_status_BRE_20250201_150813.csv  flight_status_BRE_20250201_151255.csv  flight_status_BRE_20250201_151621.csv  flight_status_BRE_20250201_173158.csv  flight_status_BRE_20250201_173312.csv  flight_status_BRE_20250201_173724.csv  flight_status_BRE_20250201_174057.csv  flight_status_BRE_20250201_174406.csv  flight_status_BRE_20250201_174738.csv  flight_status_BRE_20250201_175250.csv  flight_status_BRE_20250201_175412.csv  flight_status_BRE_20250201_175648.csv  flight_status_BRE_20250201_175859.csv  flight_status_BRE_20250201_180228.csv  flight_status_BRE_20250201_180343.csv  flight_status_BRE_20250201_180646.csv  flight_status_BRE_20250201_180946.csv  flight_status_BRE_20250201_181454.csv  flight_status_BRE_20250201_181827.csv  flight_status_BRE_20250201_182315.csv  flight_status_BRE_20250201_182742.csv  flight_status_BRE_20250201_183056.csv  flight_status_BRE_20250201_183254.csv  flight_status_BRE_20250201_183631.csv  flight_status_BRE_20250201_184106.csv  flight_status_BRE_20250201_184355.csv  flight_status_BRE_20250201_184900.csv  flight_status_BRE_20250201_185048.csv  (+692 more)
db/: DDL.sql  DML.sql  dockerfile  init_permissions.sql
design/: V__0__.sql  db_model.txt  insert_data_0.sql  insert_data_1.sql  populate_jouneys.py  populating_journies.sql
documentation/: data_model.md  flight_status.md  issues_in_legacy_system.md
flight_booking_mock/: app.py  pyproject.toml
flight_generator/: app.py  dockerfile
flight_status_data_extract/: dockerfile  read_files.py
flight_status_data_gen/: app.py  statusCSVGen.py
internal_dashboard/: app.py  dockerfile  pyproject.toml
journey_generator/: app.py
kafka_cluster/: dockerfile  kafka.properties
kafka_consumer/: app.py
kafka_producer/: app.py  pyproject.toml
prometheus/: prometheus.yml
research/: generate.ipynb  pyproject.toml
(+24 files in other folders)
