[tool.poetry]
name = "unicornair"
version = "0.0.1"
description = "UnicornAir data engineering project"
authors = ["Malintha Adikari <malintha.adikari@awakemobility.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pytz = "^2025.1"
flask = "^3.1.0"
streamlit = "^1.41.1"
requests = "^2.32.3"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
