[tool.poetry]
name = "legacy-app"
version = "1.0.0"
description = ""
authors = ["Malintha Adikari <malintha.adikari@awakemobility.de>"]
readme = "README.md"
packages = [{include = "legacy_app"}]

[tool.poetry.dependencies]
python = "3.11.9"
pytz = "^2025.1"
flask = "^3.1.0"
streamlit = "^1.42.0"
requests = "^2.32.3"
plotly = "^6.0.0"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
