[tool.poetry]
name = "unicornair-research"
version = "1.0.0"
description = ""
authors = ["Malintha Adikari <malintha.adikari@awakemobility.de>"]
readme = "README.md"
packages = [{include = "unicornair_research"}]

[tool.poetry.dependencies]
python = "3.11.9"
ipykernel = "^6.29.5"
faker = "^36.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
